--- a/tradeoption/templates/tradeoption/register.html
+++ b/tradeoption/templates/tradeoption/register.html
@@ -80,13 +80,13 @@
                         <form class="login-form" method="POST">
                         {% csrf_token %}
                       
-                        {% for error in r_form.non_field_errors %}
-                            <p style="color: red">{{error}}</p>                 
+                        <!-- {% for error in r_form %}
+                            <p style="color: red">{{error.errors}}</p>                 
                        {% endfor %}
                     
-                         {% for error in t_form.non_field_errors %}
-                             <p style="color: red">{{error}}</p>                 
-                        {% endfor %}
+                         {% for error in t_form %}
+                             <p style="color: red">{{error.errors}}</p>                 
+                        {% endfor %} -->
 
                             <div class="form-group">
                                 
